--- a/Weather App.html
+++ b/Weather App.html
@@ -41,8 +41,8 @@
 
         <script>
 
-            const apiKey = "7eafdf00353a53b7e3c5655a08e5dd80";
-            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+            const apiKey = "accessKey";
+            const apiUrl = "url";
 
             const searchBox = document.querySelector(".search input");
             const searchBtn = document.querySelector(".search button");
